Add redis, and cached all Posts
